--- a/Command/Command/src/main/resources/application.yml
+++ b/Command/Command/src/main/resources/application.yml
@@ -1,13 +1,59 @@
-spring:
-  application:
-    name: command-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/commanddb?createIfNotExists=true
-    username: root
-    password: mysql
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
-server:
-  port: 8081
+#spring:
+#  application:
+#    name: command-service
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/commanddb?createDatabaseIfNotExist=true
+#    username: root
+#    password: mysql
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    show-sql: true
+#    database-platform: org.hibernate.dialect.MySQL8Dialect
+#server:
+#  port: 8081
+
+
+
+version: '2.1'
+services:
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:6.1.1
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+
+  # reachable on 9092 from the host and on 29092 from inside docker compose
+  kafka:
+    image: confluentinc/cp-kafka:6.1.1
+    depends_on:
+      - zookeeper
+    ports:
+      - '9092:9092'
+  environment:
+    KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+    KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+    KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+    KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+    KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: '1'
+    KAFKA_MIN_INSYNC_REPLICAS: '1'
+
+    init-kafka:
+      image: confluentinc/cp-kafka:6.1.1
+      depends_on:
+        - kafka
+      entrypoint: [ '/bin/sh', '-c' ]
+      command: |
+        "
+        # blocks until kafka is reachable
+        kafka-topics --bootstrap-server kafka:29092 --list
+        
+        echo -e 'Creating kafka topics'
+        kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic my-topic-1 --replication-factor 1 --partitions 1
+        kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic my-topic-2 --replication-factor 1 --partitions 1
+        
+        echo -e 'Successfully created the following topics:'
+        kafka-topics --bootstrap-server kafka:29092 --list
+        "
