--- a/Query/Query/src/main/resources/application.yml
+++ b/Query/Query/src/main/resources/application.yml
@@ -2,12 +2,13 @@ spring:
   application:
     name: query
   datasource:
-    url: jdbc:mysql://localhost:3306/querydb?createIfNotExists=true
+    url: jdbc:mysql://localhost:3306/querydb?createDatabaseIfNotExist=true
     username: root
     password: mysql
   jpa:
     hibernate:
       ddl-auto: create
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
 server:
-  port: 8081
+  port: 8082
